Renaming package and new versioning

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,660 +1,5 @@
-lightdm-gtk-greeter (2.0.5-0ubuntu1) bionic; urgency=medium
+gecosws-lightdm-greeter (1.0.0-0gecos1) bionic; urgency=medium
 
-  * New upstream release.
-  * d/p/01_add_back_power_indicator.patch:
-    - Dropped, included upstream.
+  * New .glade file. username/password labels added to login box.
 
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 20 Mar 2018 05:53:31 -0400
-
-lightdm-gtk-greeter (2.0.4-1ubuntu1) bionic; urgency=medium
-
-  * New upstream release.
-    - Fix: black screen after booting, 100% CPU usage (LP: #1410406, #1509780)
-  * Merge with Debian unstable. Remaining changes:
-    - debian/{01_ubuntu.conf,60-lightdm-gtk-greeter.conf,rules} add and
-      install.
-    - debian/control: 
-      + Build-Depends on liblightdm-gobject-1-dev instead on 
-        liblightdm-gobject-dev as it's non-existing in archive.
-      + Add budgie-lightdm-theme to break/replaces due to conflicting
-        budgie-desktop greeter icon (LP: #1669818)
-      + Install desktop-base as a suggestion, not as a recommendation 
-        (LP: #1669818)
-    - debian/copyright: update copyright for lightdm-gtk-greeter.
-    - debian/lightdm-gtk-greeter.{preinst,postinst,postrm}: migrate post-1.0.0
-      configuration to conf.d/01_ubuntu.conf.
-    - debian/lightdm-gtk-greeter.maintscript: drop obsolete version of Ubuntu
-      config from /etc.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 21 Feb 2018 21:45:55 -0500
-
-lightdm-gtk-greeter (2.0.4-1) unstable; urgency=medium
-
-  * debian/control:
-    - replace gnome-icon-theme-symbolic by adwaita-icon-theme.  closes: #884412
-  * Moved the package to git on salsa.debian.org
-  * Updated the maintainer address to debian-xfce@lists.debian.org
-  * New upstream version 2.0.4
-  * enable libindicator support
-  * d/p/01_add_back_power_indicator added (closes: #884097)
-  * d/patches: remove obsolete and unapplier at_spi patch
-  * debian/copyright: update for new release
-
- -- Yves-Alexis Perez <corsac@debian.org>  Wed, 21 Feb 2018 11:34:28 +0100
-
-lightdm-gtk-greeter (2.0.3-1) unstable; urgency=medium
-
-  * New upstream release.
-    - fix hangs when Orca is enabled.                           closes: #883215
-    - drop deprecated gnome-common macros usage.                closes: #829931
-  * debian/patches:
-    - 01_at-spi disabled for now: it doesn't apply anymore, and there are
-    ongoing discussions on how to handle a11y properly.
-  * Run wrap-and-sort.
-  * debian/rules:
-    - drop call to autotools-dev addon.
-    - force-disable build with -Werror: LGG 2.0.3 enforce build with -Werror,
-    and it fails because Debian uses -Wdate-time (for build reproducibility)
-    and LGG uses __DATE__ and __TIME__.
-  * debian/contro:
-    - replace autotools-dev build-dep by debhelper >= 9.20160115.
-    - update standards version to 4.1.2.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 10 Dec 2017 00:38:30 +0100
-
-lightdm-gtk-greeter (2.0.2-1ubuntu1) artful; urgency=medium
-
-  * Merge from Debian.
-    - This includes the new Budgie greeter badge added upstream (LP: #1568494).
-    - Thanks to Sean Davis for preparing this merge. See LP 1669818 for details
-      of this rewritten changelog.
-  * Remaining changes:
-    - debian/{01_ubuntu.conf,60-lightdm-gtk-greeter.conf,rules} add and
-      install.
-    - debian/control: add Indicators support.
-    - debian/control: Build-Depends on liblightdm-gobject-1-dev instead on
-      liblightdm-gobject-dev as it's non-existing in archive.
-    - debian/copyright: update copyright for lightdm-gtk-greeter.
-    - debian/lightdm-gtk-greeter.{preinst,postinst,postrm}: migrate post-1.0.0
-      configuration to conf.d/01_ubuntu.conf.
-    - debian/lightdm-gtk-greeter.lintian-overrides: drop unused override.
-    - debian/lightdm-gtk-greeter.maintscript: drop obsolete version of Ubuntu
-      config from /etc.
-  * Drop changes:
-    - Properly handle the startup/shutdown of the at-spi registry (now in
-      Debian).
-
-  [ David Mohammed ]
-  * Add budgie-lightdm-theme to break/replaces due to conflicting
-    budgie-desktop greeter icon (LP: #1669818).
-  * Install desktop-base as a suggestion, not as a recommendation (LP:
-    #1669818).
-
- -- Robie Basak <robie.basak@ubuntu.com>  Wed, 03 May 2017 15:20:48 +0100
-
-lightdm-gtk-greeter (2.0.2-1) unstable; urgency=medium
-
-  * New upstream release.
-  * debian/control:
-    - add build-dep on exo-utils for exo-csource.
-    - update standards version to 3.9.8.
-  * debian/patches:
-    - 01_at-spi added, fix accessibility.                       closes: #802220
-
- -- Yves-Alexis Perez <corsac@debian.org>  Wed, 16 Nov 2016 21:48:17 +0100
-
-lightdm-gtk-greeter (2.0.1-2ubuntu4) xenial; urgency=medium
-
-  * Properly handle the startup/shutdown of the at-spi registry
-
- -- Luke Yelavich <themuso@ubuntu.com>  Mon, 11 Apr 2016 13:14:12 +1000
-
-lightdm-gtk-greeter (2.0.1-2ubuntu3) xenial; urgency=medium
-
-  * debian/01_ubuntu.conf
-    - Update indicators config parameter
-  * debian/rules
-    - Install base Ubuntu config to /usr
-  * debian/lightdm-gtk-greeter.lintian-overrides
-    - Drop unused override
-  * debian/lightdm-gtk-greeter.maintscript
-    - Drop now obsolete version of Ubuntu config from /etc
-
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 11 Feb 2016 01:47:47 -0500
-
-lightdm-gtk-greeter (2.0.1-2ubuntu2) wily; urgency=medium
-
-  * debian/60-lightdm-gtk-greeter.conf:
-    - Use [Seat:*] instead of deprecated [SeatDefaults]
-
- -- Robert Ancell <robert.ancell@canonical.com>  Fri, 07 Aug 2015 13:20:33 +1200
-
-lightdm-gtk-greeter (2.0.1-2ubuntu1) wily; urgency=medium
-
-  * Merge from Debian unstable.  Remaining changes:
-    - debian/01_ubuntu.conf
-      + Renamed from lightdm-gtk-greeter-ubuntu.conf
-      + Removed unneeded comments
-    - debian/control, debian/rules:
-      + Add Indicators support.
-    - debian/control:
-      + Build-Depends on liblightdm-gobject-1-dev instead on
-        liblightdm-gobject-dev as it's non-existing in archive.
-    - debian/copyright:
-      + Update copyright for lightdm-gtk-greeter, it's been a long time
-        since lightdm housed all of the greeters
-    - debian/01_ubuntu.conf,
-      debian/lightdm-gtk-greeter.{post,pre}{inst,rm},
-      debian/60-lightdm-gtk-greeter.conf:
-      + Install and remove Ubuntu conf files.
-    - debian/lightdm-gtk-greeter.{preinst,prerm,postinstpostrm}
-      + Migrate post-1.0.0 configuration to conf.d/01_ubuntu.conf
-      + Do not use update-alternatives for lightdm-gtk-greeter config
-    - debian/rules
-      + Install lightdm and lightdm-gtk-greeter configuration
-
- -- Jackson Doak <noskcaj@ubuntu.com>  Tue, 23 Jun 2015 07:55:21 +1000
-
-lightdm-gtk-greeter (2.0.1-2) unstable; urgency=medium
-
-  * debian/rules:
-    - use --enable-kill-on-sigterm for configure, prevents spawning new VTs
-      when using GTK 3.16.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 21 Jun 2015 11:12:26 +0200
-
-lightdm-gtk-greeter (2.0.1-1ubuntu1) wily; urgency=low
-
-  [ Sean Davis ]
-  * Merge from Debian unstable.  Remaining changes:
-    - debian/01_ubuntu.conf
-      + Renamed from lightdm-gtk-greeter-ubuntu.conf
-      + Removed unneeded comments
-    - debian/control, debian/rules:
-      + Add Indicators support.
-    - debian/control:
-      + Build-Depends on liblightdm-gobject-1-dev instead on
-        liblightdm-gobject-dev as it's non-existing in archive.
-    - debian/copyright:
-      + Update copyright for lightdm-gtk-greeter, it's been a long time
-        since lightdm housed all of the greeters
-    - debian/01_ubuntu.conf,
-      debian/lightdm-gtk-greeter.{post,pre}{inst,rm},
-      debian/60-lightdm-gtk-greeter.conf:
-      + Install and remove Ubuntu conf files.
-    - debian/lightdm-gtk-greeter.{preinst,prerm,postinstpostrm}
-      + Migrate post-1.0.0 configuration to conf.d/01_ubuntu.conf
-      + Do not use update-alternatives for lightdm-gtk-greeter config
-    - debian/rules
-      + Install lightdm and lightdm-gtk-greeter configuration
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 16 Jun 2015 20:20:00 -0400
-
-lightdm-gtk-greeter (2.0.1-1) unstable; urgency=medium
-
-  * New upstream release:
-    - fix multiple issues in multi-monitor setup.               closes: #785055
-  * debian/01_debian.conf: 
-    - add Debian default configuration
-  * debian/rules:
-    - ship Debian configuration in newly supported
-    /u/s/lightdm/lightdm-gtk-greeter.conf.d folder.
-  * debian/patches:
-    - 04_default-gtk-greeter-config dropped, we use config folders now.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Thu, 21 May 2015 23:25:38 +0200
-
-lightdm-gtk-greeter (2.0.0-3) unstable; urgency=medium
-
-  * debian/patches:
-    - 04_default-gtk-greeter-config: stop overriding upstream configuration
-    for indicators, brings the clock back.                      closes: #784627
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 12 May 2015 20:51:05 +0200
-
-lightdm-gtk-greeter (2.0.0-2) unstable; urgency=medium
-
-  * Upload to unstable.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Wed, 06 May 2015 22:47:48 +0200
-
-lightdm-gtk-greeter (2.0.0-1) experimental; urgency=medium
-
-  * New upstream release.
-  * debian/patches:
-    - 01_unset_AT_SPI_BUS-X11-property dropped, normally not needed anymore.
-    - 04_default-gtk-greeter-config refreshed for new upstream.
-  * debian/control:
-    - update standards version to 3.9.6.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Fri, 13 Mar 2015 22:40:19 +0100
-
-lightdm-gtk-greeter (2.0.0-0ubuntu1) vivid; urgency=medium
-
-  * New upstream release, fixes:
-    - lightdm-gtk-greeter leaves a11y (at-spi*) process behind (LP: #1366534)
-    - Indicator services restart after every resume (LP: #1377743)
-    - No indicators displayed when systemd-sysv is installed (LP: #1398619)
-  * debian/control:
-    - Update Standards-Version to 3.9.6
-  * debian/copyright:
-    - Update copyright for lightdm-gtk-greeter, it's been a long time
-      since lightdm housed all of the greeters
-  * debian/lightdm-gtk-greeter-ubuntu.conf
-    - Refresh configuration template, fix appearance in Ubuntu
-  * debian/rules
-    - Drop obsolete configure argument
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 15 Feb 2015 22:26:56 -0500
-
-lightdm-gtk-greeter (1.9.0-0ubuntu1) utopic; urgency=medium
-
-  * New upstream release,
-    - Fixes AccountsService logon background conflict (LP: #1306362)
-    - Fixes Login screen wallpaper doesn't fill screen (LP: #1325719)
-    - Fixes user-supplied default user image (LP: #1317236)
-    - Fixes mouse-cursor theme changing after logon (LP: #1024482)
-
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 20 Aug 2014 19:39:03 -0400
-
-lightdm-gtk-greeter (1.8.5-2) unstable; urgency=medium
-
-  * debian/control, debian/copyright:
-    - patch from Artur Rona to fix various lintian warnings.    closes: #750901
-  * debian/patches:
-    - 01_unset_AT_SPI_BUS-X11-property added, unset AT_SPI_BUS property from
-     the root window.                                           closes: #760740
-
- -- Yves-Alexis Perez <corsac@debian.org>  Fri, 21 Nov 2014 18:03:40 +0100
-
-lightdm-gtk-greeter (1.8.5-1ubuntu2) utopic; urgency=medium
-
-  * Fix indicator support (LP: #1336727)
-    - debian/changelog:
-      + Build-Depends on libido3-0.1-dev
-
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 02 Jul 2014 06:20:58 -0400
-
-lightdm-gtk-greeter (1.8.5-1ubuntu1) utopic; urgency=low
-
-  * Merge from Debian unstable. (LP: #1320830) Remaining changes:
-    - debian/control, debian/rules:
-      + Add Indicators support.
-    - debian/control:
-      + Build-Depends on liblightdm-gobject-1-dev instead on
-        liblightdm-gobject-dev as it's non-existing in archive.
-      + Fix binary-control-field-duplicates-source lintian tag.
-    - debian/copyright:
-      + Fix wiki-copyright-format-uri lintian tag.
-      + Fix obsolete-field-in-dep5-copyright lintian tags.
-      + Add missing license information.
-    - debian/lightdm-gtk-greeter-ubuntu.conf,
-      debian/lightdm-gtk-greeter.install,
-      debian/lightdm-gtk-greeter.{post,pre}{inst,rm},
-      debian/60-lightdm-gtk-greeter.conf:
-      + Install and remove Ubuntu conf files.
-    - debian/lightdm-gtk-greeter-ubuntu.conf, debian/rules:
-      + Updated per new template, replaced deprecated
-        "show-indicators" key.
-    - debian/patches/04_default-gtk-greeter-config.patch:
-      + Disabled, not used in Ubuntu.
-
- -- Artur Rona <ari-tczew@ubuntu.com>  Sat, 07 Jun 2014 15:45:56 +0200
-
-lightdm-gtk-greeter (1.8.5-1) unstable; urgency=medium
-
-  * New upstream release.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 06 May 2014 07:43:18 +0200
-
-lightdm-gtk-greeter (1.8.4-1) unstable; urgency=medium
-
-  * New upstream release.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 22 Apr 2014 23:15:46 +0200
-
-lightdm-gtk-greeter (1.8.4-0ubuntu1) trusty; urgency=medium
-
-  * New upstream release (LP: #1299397)
-    - Really fix exit bug (LP: #1290575)
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sat, 29 Mar 2014 05:51:45 -0400
-
-lightdm-gtk-greeter (1.8.3-1) unstable; urgency=medium
-
-  * New upstream release.
-  * debian/upstream/signing-key.asc with upstream public PGP key.
-  * debian/watch:
-    - add pgpsigurlmangle option to check the package signature
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 25 Mar 2014 22:01:50 +0100
-
-lightdm-gtk-greeter (1.8.3-0ubuntu1) trusty; urgency=medium
-
-  * New upstream release (LP: #1291913)
-    - Now correctly exits when logging in (LP: #1290575)
-
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 13 Mar 2014 06:35:23 -0400
-
-lightdm-gtk-greeter (1.8.2-1ubuntu1) trusty; urgency=medium
-
-  * Merge with Debian unstable, remaining changes:
-    - debian/rules:
-      + add indicators to dh_auto_configure
-    - debian/control:
-      + add depends for indicator support
-      + add depends for liblightdm-gobject-1-dev (ubuntu naming is different)
-      + fix binary-control-field-duplicates-source lintian tag
-    - debian/copyright:
-      + fix wiki-copyright-format-uri lintian tag
-      + fix obsolete-field-in-dep5-copyright lintian tags
-      + add missing license information
-    - debian/lightdm-gtk-greeter-ubuntu.conf,
-    - debian/lightdm-gtk-greeter.install,
-    - debian/lightdm-gtk-greeter.{post,pre}{inst,rm},
-    - debian/60-lightdm-gtk-greeter.conf:
-      + install and remove ubuntu conf files 
-  * New upstream release (LP: #1286949).
-    - Fixes segfault on uninstalled session (LP: #1272910)
-    - Prefer the system default language over English (LP: #1276072)
-    - Remember last session and language per user (LP: #1282139)
-  * debian/lightdm-gtk-greeter-ubuntu.conf:
-    - Updated per new template, replaced deprecated "show-indicators" key
-  * debian/patches/update-session-language.patch:
-    - Removed as fix is included upstream in 1.8.2
-
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 02 Mar 2014 19:43:01 -0500
-
-lightdm-gtk-greeter (1.8.2-1) unstable; urgency=medium
-
-  * New upstream release.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 02 Mar 2014 16:35:35 +0100
-
-lightdm-gtk-greeter (1.8.1-1ubuntu2) trusty; urgency=medium
-
-  [ Thaddäus Tintenfisch ]
-  * debian/patches/update-session-language.patch:
-    - Always update preselected session and language when another
-      user is selected (LP: #1282139).
-
- -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Sun, 02 Mar 2014 18:05:00 +0100
-
-lightdm-gtk-greeter (1.8.1-1ubuntu1) trusty; urgency=medium
-
-  [ Sean Davis ]
-  * Merge from debian experimental (LP: #1280670), remaining changes:
-    - debian/rules:
-      + add indicators to dh_auto_configure
-    - debian/control:
-      + add depends for indicator support
-      + add depends for liblightdm-gobject-1-dev (ubuntu naming is different)
-      + fix binary-control-field-duplicates-source lintian tag
-    - debian/copyright:
-      + fix wiki-copyright-format-uri lintian tag
-      + fix obsolete-field-in-dep5-copyright lintian tags
-    - debian/lightdm-gtk-greeter-ubuntu.conf,
-    - debian/lightdm-gtk-greeter.install,
-    - debian/lightdm-gtk-greeter.{post,pre}{inst,rm},
-    - debian/60-lightdm-gtk-greeter.conf,
-      + install and remove ubuntu conf files 
-  * debian/lightdm-gtk-greeter-ubuntu.conf:
-    - updated hints from 1.8 template file
-    - use new indicator loading for language, session, power indicators
-  * Remove debian patches:
-    - 04_default-gtk-greeter-config.patch: not used in ubuntu
-    - 07_fix-NULL-username.patch: patch was included upstream, no longer used
-
-  [ Dmitry Shachnev ]
-  * Add missing license information to debian/copyright.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 18 Feb 2014 04:29:53 -0500
-
-lightdm-gtk-greeter (1.8.1-1) experimental; urgency=medium
-
-  * New upstream release.
-  * debian/patches:
-    - 07_fix-NULL-username dropped, included upstream.
-    - 04_default-gtk-greeter-config refreshed.
-  * debian/lightdm-xsession.desktop: drop file from source package, it's for
-    lightdm actually.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Wed, 12 Feb 2014 21:10:12 +0100
-
-lightdm-gtk-greeter (1.7.0-2) experimental; urgency=medium
-
-  * debian/patches:
-    - 07_fix-NULL-username added, fix crash when last username is empty. This
-      is CVE-2014-0979.                                         closes: #734472
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 07 Jan 2014 23:33:38 +0100
-
-lightdm-gtk-greeter (1.7.0-1) experimental; urgency=medium
-
-  * New upstream development release.
-  * debian/patches:
-    - 04_default-gtk-greeter-config refreshed.
-    - 05_add-enter-shortcut-switch-login-password-fields dropped, included
-      upstream.
-    -06_support-session-select-before-authentication dropped, included
-      upstream. 
-  * debian/control:
-    - update standards version to 3.9.5.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 29 Dec 2013 22:20:37 +0100
-
-lightdm-gtk-greeter (1.6.1-5) unstable; urgency=high
-
-  * debian/patches:
-    - 07_fix-NULL-username addef, fix crash when last username is empty. This
-      is CVE-2014-0979.                                         closes: #734472
-  * debian/control:
-    - update standards version to 3.9.5.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 07 Jan 2014 23:33:27 +0100
-
-lightdm-gtk-greeter (1.6.1-4) unstable; urgency=low
-
-  * debian/control:
-    - replace gnome-icon-theme by gnome-icon-theme-symbolic.
-  * debian/patches:
-    - 06_support-session-select-before-authentication updated fix typo.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Mon, 18 Nov 2013 21:00:24 +0100
-
-lightdm-gtk-greeter (1.6.1-3) unstable; urgency=low
-
-  * debian/patches:
-    - 05_add-enter-shortcut-switch-login-password-fields added, cherry
-      picked from upstream. support Enter key to move from login to password
-      field.                                                    closes: #727718
-    - 06_support-session-select-before-authentication added, fix session and
-      languages selected in the menu not actually set for the current session.
-                                                                closes: #717702
-
- -- Yves-Alexis Perez <corsac@debian.org>  Thu, 31 Oct 2013 09:51:34 +0100
-
-lightdm-gtk-greeter (1.6.1-2) unstable; urgency=low
-
-  * debian/patches:
-    - 04_default-gtk-greeter-config: correct comment for hinting.
-                                                       (really) closes: #712434
-
- -- Yves-Alexis Perez <corsac@debian.org>  Wed, 09 Oct 2013 21:59:12 +0200
-
-lightdm-gtk-greeter (1.6.1-1) unstable; urgency=low
-
-  [ Yves-Alexis Perez ]
-  * New upstream release.
-  * debian/patches:
-    - 04_default-gtk-greeter-config: correct value for hinting. closes: #712434
-
-  [ Evgeni Golov ]
-  * Correct Vcs-* URLs to point to anonscm.debian.org
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sat, 21 Sep 2013 23:40:56 +0200
-
-lightdm-gtk-greeter (1.6.1-0ubuntu3) trusty; urgency=low
-
-  * debian/60-lightdm-gtk-greeter.conf,
-    debian/lightdm-gtk-greeter.install:
-    - Let lightdm-gtk-greeter take precedence over unity-greeter
-      (LP: #1275807).
-
- -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Mon, 03 Feb 2014 16:54:00 +0100
-
-lightdm-gtk-greeter (1.6.1-0ubuntu2) trusty; urgency=low
-
-  * debian/40-lightdm-gtk-greeter.conf:
-  * debian/lightdm-gtk-greeter.install:
-  * debian/lightdm-gtk-greeter.postinst:
-  * debian/lightdm-gtk-greeter.postrm:
-    - Install lightdm configuration for greeter instead of using deprecated
-      lightdm-set-defaults (LP: #1257372)
-
- -- Robert Ancell <robert.ancell@canonical.com>  Tue, 10 Dec 2013 09:08:05 +1300
-
-lightdm-gtk-greeter (1.6.1-0ubuntu1) saucy; urgency=low
-
-  [ Sean Davis ]
-  * New upstream release. (LP: #1226921)
-    - Fix inability to change session/language on logout (lp: #1213837)
-
-  [ Daniel Holbach ]
-  * d/watch: updated.
-
- -- Sean Davis <smd.seandavis@gmail.com>  Tue, 17 Sep 2013 23:01:53 -0400
-
-lightdm-gtk-greeter (1.6.0-1) unstable; urgency=low
-
-  * New upstream release.
-  * debian/control:
-    - update standards version to 3.9.4.
-    - add build-dep on autotools-dev.
-  * debian/patches:
-    - 04_default-gtk-greeter-config refresh for new upstream.
-  * debian/rules:
-    - use autotools-dev addon to rebuild config.{guess,sub} since they are
-      older than apr 2012.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Mon, 03 Jun 2013 22:55:50 +0200
-
-lightdm-gtk-greeter (1.6.0-0ubuntu1) saucy; urgency=low
-
-  * New upstream release.
-  * debian/control: update standards version, add exo-utils dependency
-  * debian/lightdm-gtk-greeter-ubuntu.conf: update for new Ubuntu defaults
-
- -- Sean Davis <smd.seandavis@gmail.com>  Fri, 05 Jul 2013 21:34:49 -0400
-
-lightdm-gtk-greeter (1.5.1-3) unstable; urgency=low
-
-  * debian/control:
-    - update liblightdm build-dependency to 1.3.5.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 05 May 2013 15:39:40 +0200
-
-lightdm-gtk-greeter (1.5.1-2) unstable; urgency=low
-
-  * Upload to unstable.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 05 May 2013 14:16:14 +0200
-
-lightdm-gtk-greeter (1.5.1-1) experimental; urgency=low
-
-  * New upstream release.
-  * debian/rules:
-    - enable all hardening flags.
-  * debian/patches:
-    - 04_default-gtk-greeter-config refreshed.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 07 Apr 2013 14:34:20 +0200
-
-lightdm-gtk-greeter (1.5.1-0ubuntu1) raring; urgency=low
-
-  * New upstream release.
-  * debian/rules: disable silent rules.
-
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 10 Feb 2013 20:18:44 +0100
-
-lightdm-gtk-greeter (1.5.0-0ubuntu1) raring; urgency=low
-
-  * New upstream release.
-  * debian/control: bump liblightdm-gobject-1-dev b-dep to >= 1.3.5.
-
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 24 Jan 2013 16:10:33 +0100
-
-lightdm-gtk-greeter (1.3.1-1) experimental; urgency=low
-
-  * New upstream release.
-  * debian/patches:
-    - 04_default-gtk-greeter-config refreshed.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Sun, 07 Oct 2012 09:38:09 +0200
-
-lightdm-gtk-greeter (1.3.1-0ubuntu2) raring; urgency=low
-
-  * debian/lightdm-gtk-greeter-ubuntu.conf:
-    - Show the language chooser by default (LP: #803858).
-
- -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Mon, 15 Oct 2012 21:59:00 +0200
-
-lightdm-gtk-greeter (1.3.1-0ubuntu1) quantal; urgency=low
-
-  * New upstream bugfix release, including ui fixes:
-    - don't hide action buttons when auth is cancelled
-    - don't show the cancel button with the userlist view (only useful in the
-      'greeter-hide-users' view).
-
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 30 Aug 2012 20:16:39 +0200
-
-lightdm-gtk-greeter (1.3.0-0ubuntu1) quantal; urgency=low
-
-  * New upstream release.
-  * debian/patches:
-    - 09_show_lang_chooser_option.patch: dropped, applied upstream.
-
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Thu, 23 Aug 2012 19:52:36 +0200
-
-lightdm-gtk-greeter (1.1.6-2) unstable; urgency=low
-
-  * debian/patches:
-    - 04_default-gtk-greeter-config updated, use login-background from
-      desktop-base.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Fri, 22 Jun 2012 08:40:58 +0200
-
-lightdm-gtk-greeter (1.1.6-1) unstable; urgency=low
-
-  * New upstream release.
-  * debian/patches:
-    - 01_fix-cancel-authentication dropped, included upstream.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Mon, 21 May 2012 21:40:54 +0200
-
-lightdm-gtk-greeter (1.1.6-0ubuntu1) quantal; urgency=low
-
-  * New upstream bugfix release, including:
-    - Fix 'Large Font' option for fontnames containing spaces lp: #908926
-    - Fix 'Cancel' button action, and clear the error label. lp: #983152
-
- -- Lionel Le Folgoc <mrpouit@ubuntu.com>  Sun, 01 Jul 2012 13:16:54 +0200
-
-lightdm-gtk-greeter (1.1.5-2) unstable; urgency=low
-
-  * Upload to unstable.
-  * debian/patches:
-    - 01_fix-cancel-authentication added, fix issue which prevents cancelling
-      an authentication process.
-  * debian/rules:
-    - build with --parallel.
-  * debian/lightdm-gtk-greeter.lintian-overrides added, add override for
-    hardening checks and missing manpages.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 15 May 2012 22:52:07 +0200
-
-lightdm-gtk-greeter (1.1.5-1) experimental; urgency=low
-
-  * Initial release.
-
- -- Yves-Alexis Perez <corsac@debian.org>  Fri, 06 Apr 2012 21:42:53 +0200
+ -- Jose M. Rodriguez <jmrodriguez@gruposolutia.com>  Tue, 20 Mar 2018 05:53:31 -0400
